# gqvis

./: .gitignore  D3Graph.py  README.md  __init__.py  _old_visualisation.js  pyproject.toml  requirements.txt  template.html
gqvis/: gqvis.py
gqvis/template/: dummyData.js  graphVisualisation.js
src/: D3Graph.py  GQVis.py
src/template/: dummyData.js  graphVisualisation.js  template.html
